<resources>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="app_name">하루세끼</string>
    <string name="best_recipe">Best 레시피</string>
    <string name="latest_recipe">최근 등록된 레시피</string>
    <string name="go_back">뒤로가기</string>
    <string name="move">이동하기</string>

    <!-- Bottom Navigation -->
    <string name="home">홈</string>
    <string name="menu">식단 관리</string>
    <string name="memo">장보기 메모</string>
    <string name="refrigerator">나의 냉장고</string>
    <string name="mypage">마이페이지</string>

    <!-- Shortcuts -->
    <string name="search_image_button_text">직접 레시피 검색</string>
    <string name="search_recipe_by_ingredients">나의 냉장고 속 재료를 조합하여 검색하기</string>
    <string name="shortcut_menu_title">오늘의 메뉴</string>
    <string name="shortcut_memo_title">필요한 재료</string>
    <string name="shortcut_refrigerator_title">냉장고 채우기</string>
    <string name="show_detail">자세히</string>
    <string name="add">추가</string>
    <string name="shortcut_memo_empty">필요한 재료가 있다면 작성해보세요!</string>
    <string name="shortcut_refrigerator_subtitle">보유한 재료를 냉장고에 넣어보세요!</string>

    <!-- RecipeCategory -->
    <string name="recipe_category_all">전체</string>
    <string name="recipe_category_rice">밥 / 죽 / 떡</string>
    <string name="recipe_category_side">반찬</string>
    <string name="recipe_category_soup">국 / 찌개</string>
    <string name="recipe_category_stir">볶음 / 구이</string>
    <string name="recipe_category_noodle">면 / 만두</string>
    <string name="recipe_category_steamed">찜 / 조림</string>
    <string name="recipe_category_western">양식</string>
    <string name="recipe_category_fried">튀김 / 부침</string>
    <string name="recipe_category_others">기타</string>

    <!-- SearchRecipe -->
    <string name="search_recipe_hint">검색할 레시피를 입력하세요</string>
    <string name="cancel">취소</string>
    <string name="okay">확인</string>
    <string name="edit">수정</string>
    <string name="latest_search_keyword">최근 검색어</string>
    <string name="remove_all">전체 삭제</string>
    <string name="remove">삭제</string>
    <string name="latest_read_recipe">최근 열람한 레시피</string>
    <string name="show_more">더보기</string>
    <string name="toast_empty_keyword">검색할 키워드를 입력하세요.</string>

    <!-- RecipeSortOption -->
    <string name="sort_by_latest">최신순</string>
    <string name="sort_by_hits">조회순</string>
    <string name="sort_by_likes">인기순</string>

    <!-- RecipeSearchMode -->
    <string name="by_title_mode_on">검색어 :</string>
    <string name="by_title_mode_off">직접 레시피 검색</string>
    <string name="by_ingredient_mode">나의 냉장고 속 재료로 검색</string>
    <string name="favorite_mode">내가 좋아한 레시피</string>

    <!-- MenuCategory -->
    <string name="breakfast">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>

    <!-- Menu -->
    <string name="toast_empty_menu">추가할 식단을 입력하세요.</string>
    <string name="delete_menu">식단 삭제하기</string>
    <string name="copy_menu">식단 복사하기</string>
    <string name="paste_menu">식단 붙여넣기</string>
    <string name="toast_copy_menu">원하는 날짜에 식단을 붙여 넣으세요.</string>
    <string name="not_exist_menu">등록된 식단이 없습니다</string>

    <!-- Ingredient Category -->
    <string name="grain">곡류</string>
    <string name="meat">육류</string>
    <string name="vegetable">채소</string>
    <string name="seafood">해물</string>
    <string name="seasoning">조미료</string>
    <string name="dairy_product">유제품</string>
    <string name="fruit">과일</string>
    <string name="nuts">견과류</string>
    <string name="others">기타</string>

    <!-- Ingredient -->
    <string name="search_ingredient_hint">검색할 재료를 입력하세요</string>
    <string name="add_ingredient">냉장고에 재료 추가하기</string>
    <string name="add_selected_ingredient">선택한 재료 냉장고에 넣기</string>
    <string name="need_ingredient">필요 재료</string>
    <string name="cooking_step">조리 과정</string>
    <string name="checklist">체크리스트</string>
    <string name="select_all">모두 체크</string>
</resources>