<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jymun.harusekki.ui.memo.MemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/shortcut_page_height"
        android:background="@drawable/shape_gray_round_rectangle"
        android:padding="30dp"
        tools:layout_width="@dimen/shortcut_page_width">

        <ImageView
            android:id="@+id/shortcutIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_shortcut_memo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shortcutTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shortcut_memo_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/shortcutIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/shortcut_memo_empty"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="@id/shortcutTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/shortcutTitleTextView" />

        <TextView
            android:id="@+id/moveToMenoFragmentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_detail"
            android:textColor="@color/gray_light"
            app:drawableEndCompat="@drawable/ic_arrow_forward"
            app:drawableTint="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/shortcutTitleTextView" />

        <SeekBar
            android:id="@+id/memoSeekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:max="@{viewModel.memoCount}"
            android:min="0"
            android:progress="@{viewModel.selectedMemoCount}"
            android:progressTint="@color/app_signature"
            android:thumb="@drawable/shape_seekbar_thumb"
            app:layout_constraintBottom_toTopOf="@id/memoSeekbarStateTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subTitleTextView" />

        <TextView
            android:id="@+id/memoSeekbarStateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text='@{viewModel.selectedMemoCount + "/" + viewModel.memoCount}'
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/memoSeekbar"
            app:layout_constraintTop_toBottomOf="@id/memoSeekbar"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>