<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.jymun.harusekki.ui.base.LoadState" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.jymun.harusekki.ui.ingredient.IngredientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.jymun.harusekki.ui.custom_view.HaruSekkiBaseToolbar
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:toolbar_icon="@drawable/ic_ingredient"
            app:toolbar_text="재료 선택">

            <com.jymun.harusekki.ui.custom_view.HaruSekkiToolbarButton
                android:id="@+id/addInRefrigeratorButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:button_icon="@drawable/ic_add"
                app:button_text="@string/add_selected_ingredient"
                app:button_text_enabled="true" />

        </com.jymun.harusekki.ui.custom_view.HaruSekkiBaseToolbar>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|enterAlways">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/searchTextInputLayout"
                        style="@style/Theme.TextInputLayout.Custom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        app:boxStrokeColor="@color/white"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/white"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toStartOf="@id/cancelButton"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/ic_search"
                        app:startIconTint="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/searchEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/search_ingredient_hint"
                            android:imeOptions="actionSearch"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.searchKeyword}"
                            android:textColor="@color/white"
                            android:textColorHint="@color/gray_light"
                            android:textCursorDrawable="@drawable/shape_cursor_white" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/cancelButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:padding="12dp"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="@id/searchTextInputLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/searchTextInputLayout" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <include
                android:id="@+id/fragmentIngredientContent"
                layout="@layout/fragment_ingredient_content" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/app_signature_dark"
            android:progressTint="@color/app_signature_dark"
            android:visibility="@{viewModel.loadState instanceof LoadState.Loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>